# ChaCha20

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: chacha20.hpp
include/chacha20/: apply.hpp  detail.hpp  state-djb.hpp  state-rfc7539.hpp
reference/: CMakeLists.txt  chacha.c
src/: CMakeLists.txt  chacha20.cpp  config.hpp.in  state-djb.cpp
test/: CMakeLists.txt  chacha-djb.cpp  chacha-rfc7539.cpp  chacha.cpp  doctest-rapidcheck.hpp  main.cpp
